--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html, body, :global(#root) {
 
 :global(.am-list-item .am-input-control input) {
   text-align: right;
-  font-size: 25px!important;
+  font-size: 28px!important;
 }
 
 :global(.am-list-item .am-input-label.am-input-label-5) {
@@ -24,10 +24,10 @@ html, body, :global(#root) {
   font-size: 30px!important;
 }
 :global(.am-list-extra) {
-  font-size: 25px!important;
+  font-size: 28px!important;
 }
 :global(.am-button) {
-  font-size: 30px!important;
+  font-size: 32px!important;
 }
 :global(.am-textarea-control textarea) {
   font-size: 30px!important
@@ -35,12 +35,12 @@ html, body, :global(#root) {
 :global(.am-textarea-count) {
   font-size: 25px!important
 }
-/*:global(.am-popup) {
+:global(.am-popup) {
   background-color: rgba(0, 0, 0, 0)!important
 }
 :global(.am-popup-mask) {
-  background-color: rgba(0, 0, 0, 1)!important
-}*/
+  background-color: rgba(0, 0, 0, 0.7)!important
+}
 
 /*刷新控件*/
 :global(.am-refresh-control-loading) {
