--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-
 html, body, :global(#root) {
   height: 100%;
+  width: 100%;
+  margin: 0!important
 }
+
 
 :global(.am-list-body:after) {
     border-bottom: 0px!important
