--- a/lib/app/mobileApp.css
+++ b/lib/app/mobileApp.css
@@ -18,16 +18,22 @@ html, body, :global(#root) {
 
 :global(.am-list-item .am-input-control input) {
   text-align: right;
-  font-size: 28px!important;
 }
 
 :global(.am-list-item .am-input-label.am-input-label-5) {
   width: 210px!important;
-  font-size: 30px!important;
+}
+
+:global(.am-list-item) {
+  min-height: 100px!important
+}
+
+:global(.am-list-body div:not(:last-child) .am-list-line:after) {
+  border-bottom: 1px solid rgb(220, 220, 220)!important
 }
 
 :global(.am-list-content) {
-  font-size: 30px!important;
+  color: rgb(50, 50, 50)!important
 }
 :global(.am-list-extra) {
   font-size: 28px!important;
