--- a/lib/app/mobileApp.css
+++ b/lib/app/mobileApp.css
@@ -1,7 +1,8 @@
 html, body, :global(#root) {
   height: 100%;
   width: 100%;
-  margin: 0!important
+  margin: 0!important;
+  overflow-x: hidden;
 }
 
 
