--- a/src/app/mobileApp.css
+++ b/src/app/mobileApp.css
@@ -4,6 +4,7 @@ html, body, :global(#root) {
   margin: 0!important;
   overflow-x: hidden;
   position: absolute;
+  font-family: '"SF Pro SC","SF Pro Text","SF Pro Icons","PingFang SC","Helvetica Neue","Helvetica","Arial",sans-serif';
 }
 
 
